--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
     <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <link rel="shortcut icon" href="assets/ico/System Security Firewall ON.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
@@ -50,17 +50,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <span class="li-text">
-								Put some text or
+								For source code, go to 
 							</span>
-                        <a href="#"><strong>links</strong></a>
-                        <span class="li-text">
-								here, or some icons: 
-							</span>
+                        <a href="https://github.com/Haisu7025/SDN_Firewall"><strong>Github</strong></a>
                         <span class="li-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a> 
-                            <a href="#"><i class="fa fa-twitter"></i></a> 
+                            <a href="https://github.com/Haisu7025/SDN_Firewall"><i class="fa fa-github"></i></a> 
                             <a href="#"><i class="fa fa-envelope"></i></a> 
-                            <a href="#"><i class="fa fa-skype"></i></a>
 						</span>
                     </li>
                 </ul>
@@ -84,11 +79,11 @@
 
 
                 <div class="btn-group btn-group-xs">
-                    <label class="" for="form-first-name">Controller IP Address</label>
+                    <span class="label label-info">Controller IP</span>
+                    <label id="ipc" class="label label-success" for="form-first-name">Confirm</label>
                     <div class="form-top">
                         <input autocomplete="on" type="text" name="form-first-name" placeholder="Controller IP Address ..." class="form-first-name form-control" id="cia">
                     </div>
-                    <button id="ipc" class="btn btn-sm">Confirm</button>
                 </div>
                 <div class="row">
 
