add DELETE function:

--- a/index.html
+++ b/index.html
@@ -222,18 +222,22 @@
                             </div>
 
                             <button id="cfw" class="btn">Add Firewall!</button>
-                            <div class="description">
-                                <p>
-                                    Click 'Add rule!' or 'Add para!' to add a specific firewall rule/parameter!
-                                </p>
-                            </div>
-
-
+                            <div class="form-group"></div>
+                            <button id="dfw" class="btn">Delete Firewall!</button>
                         </div>
+
+                        <div class="description">
+                            <p>
+                                Click 'Add rule!' or 'Add para!' to add a specific firewall rule/parameter!
+                            </p>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
